poc/webtest_pod.yml
apiVersion: 'v1'
kind: Pod
metadata:
  name: webtest
  labels:
    name: web
    module: WebServer
    environment: development
spec:
  serviceAccountName: payment-sa
  containers:
    - name: webtest
      image: pawatiamsupa/payment-cdn:latest
      ports:
        - containerPort: 5000
          protocol: TCP
      resources:
        requests:
          memory: '256Mi'
          cpu: '200m'
        limits:
          memory: '512Mi'
          cpu: '400m'
