poc/payment-cdn-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-cdn
  labels:
    name: cdn
    version: "1.0"
    module: common
    environment: development
spec:
  selector:
    name: cdn
    version: "1.0"
    module: common
    environment: development
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
